# heart_monitor_back-end

./: README.md  pyproject.toml
Model/: create.py  creating_models.py  feature_columns.pkl  mlp_model.pkl  scaler.pkl  xgb_model.pkl
app/: main.py
app/core/: config.py
app/db/: database.py
app/edge/: anomaly.py  filters.py  processor.py
app/models/: profile_model.py  sensor_model.py  user_model.py
app/routes/: auth_routes.py  predict_routes.py  profile_routes.py  sensor_routes.py
app/services/: auth_service.py  predict_service.py  profile_service.py  sensor_service.py
app/utils/: security.py
datasets/: final_dataset_2700_enhanced.csv  final_dataset_v2_clean.csv  final_datset_creation.py
